rootskel (1.03) UNRELEASED; urgency=low

  * Jim Lieb
    - Add 2.6 kernels to ia64 build
  * Martin Michlmayr
    - Load framebuffer modules for sb1-swarm-bn on mips/mipsel.

 -- dann frazier <dannf@debian.org>  Wed, 15 Sep 2004 20:12:16 -0600

rootskel (1.02) unstable; urgency=low

  * Bastian Blank
    - Update s390 to 2.4.27 kernel.
  * Bdale Garbee
    - Update hppa to 2.4.27 kernel.

 -- Bdale Garbee <bdale@gag.com>  Tue, 14 Sep 2004 10:38:42 -0600

rootskel (1.01) unstable; urgency=low

  * dann frazier
    - Set Default[ia64] to kernel-image-2.4.27-1-itanium-smp
      (was kernel-image-2.4.25-itanium-smp)
  * Joshua Kwan
    - Set initrd/initrd-2.6 to true for sparc.
  * Joey Hess
    - Update i386 to 2.4.27 and 2.6.8 kernels.

 -- Joey Hess <joeyh@debian.org>  Mon, 13 Sep 2004 13:20:07 -0400

rootskel (1.00) unstable; urgency=low

  * Colin Watson
    - Install acpi and framebuffer startup scripts on amd64 as well as i386.
      Rename scripts to match.
  * Joey Hess
    - Add the id of the question to the dummy template description so bug
      reports can be more useful.

 -- Joey Hess <joeyh@debian.org>  Fri, 10 Sep 2004 11:36:59 -0400

rootskel (0.92) unstable; urgency=low

  * Joey Hess
    - Disable printk when displaying the prompt in boot floppy init
      to avoid ugly delayed usb messages overwriting the prompt.

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Sep 2004 18:16:26 -0400

rootskel (0.91) unstable; urgency=low

  * Joey Hess
    - Add S05acpi-i386 to load fan and thermal modules if available
      as early as practical in boot to avoid machine meltdown.

 -- Joey Hess <joeyh@debian.org>  Thu, 19 Aug 2004 20:39:33 +0100

rootskel (0.90) unstable; urgency=low

  * Joey Hess
    - env2debconf: Mark preseeded questions as seen to avoid pestering the
      user with them.

 -- Joey Hess <joeyh@debian.org>  Thu, 19 Aug 2004 16:22:43 +0100

rootskel (0.89) unstable; urgency=low

  * Wouter Verhelst