@@ -4,8 +4,10 @@ rootskel (1.03) UNRELEASED; urgency=low
     - Add 2.6 kernels to ia64 build
   * Martin Michlmayr
     - Load framebuffer modules for sb1-swarm-bn on mips/mipsel.
+  * Sven Luther
+    - Load framebuffer modules for tgafb on alpha.
 
- -- dann frazier <dannf@debian.org>  Wed, 15 Sep 2004 20:12:16 -0600
+ -- Sven Luther <luther@debian.org>  Thu, 23 Sep 2004 16:47:25 +0200
 
 rootskel (1.02) unstable; urgency=low
 
